--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,13 @@
     <link rel="shortcut icon" href="favicon.ico">
 
     <!-- build:js(bower_components) js/libs.js -->
+    <script src="jquery/dist/jquery.js"></script>
+    <script src="jquery-ui/jquery-ui.js"></script>
     <script src="angular/angular.js"></script>
     <script src="angular-elastic/elastic.js"></script>
     <script src="angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="angular-ui-sortable/sortable.js"></script>
     <script src="angular-resource/angular-resource.js"></script>
     <script src="angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="angular-sanitize/angular-sanitize.js"></script>
@@ -42,8 +45,10 @@
     <script src="marked/marked.min.js"></script>
     <script src="highlightjs/highlight.pack.js"></script>
     <!-- endbuild -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.js"></script>
 
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.css">
 
     <script src="js/storyboard.js"></script>
     <script src="js/templates.js"></script>
