--- a/src/index.html
+++ b/src/index.html
@@ -41,11 +41,11 @@
     <script src="angular-cache/dist/angular-cache.js"></script>
     <script src="moment/moment.js"></script>
     <script src="angular-moment/angular-moment.js"></script>
+    <script src="ng-sortable/dist/ng-sortable.js"></script>
     <!-- endbuild -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.js"></script>
 
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="ng-sortable.min.css">
 
     <script src="js/storyboard.js"></script>
     <script src="js/templates.js"></script>
